[009] Update tables, fix editors, remove useless method in swagger
